@@ -38,3 +38,4 @@
 13-Aug-2019  - V0.38 Add support for multipart serialization/deserialization
 14-Aug-2019  - V0.39 Add methods for making working directories
 29-Aug-2019  - V0.40 Fix py27 compatibility issues
+ 4-Sep-2019  - V0.41 Add common json numpy type encodings
